--- a/Data_Science-analises_para_saude_e_medicina/Data_Science_e_Saude.ipynb
+++ b/Data_Science-analises_para_saude_e_medicina/Data_Science_e_Saude.ipynb
@@ -3921,6 +3921,240 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 42,
+   "source": [
+    "confirmed.groupby(\"Country/Region\").sum()[last_date].head()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "Country/Region\n",
+       "Afghanistan    5\n",
+       "Albania        0\n",
+       "Algeria        3\n",
+       "Andorra        1\n",
+       "Angola         0\n",
+       "Name: 3/2/20, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 42
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "source": [
+    "deaths.groupby(\"Country/Region\").sum()[last_date].head()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "Country/Region\n",
+       "Afghanistan    0\n",
+       "Albania        0\n",
+       "Algeria        0\n",
+       "Andorra        0\n",
+       "Angola         0\n",
+       "Name: 3/2/20, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 43
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "source": [
+    "recovered.groupby(\"Country/Region\").sum()[last_date].head()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "Country/Region\n",
+       "Afghanistan    0\n",
+       "Albania        0\n",
+       "Algeria        0\n",
+       "Andorra        0\n",
+       "Angola         0\n",
+       "Name: 3/2/20, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 44
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "source": [
+    "def latest_by_country(data):\n",
+    "    return data.groupby(\"Country/Region\").sum()[last_date].head()\n",
+    "    \n",
+    "    # return data.groupby(\"Country/Region\").sum().iloc[:,-1].head()\n",
+    "\n",
+    "display(latest_by_country(confirmed).head())\n",
+    "display(latest_by_country(deaths).head())\n",
+    "display(latest_by_country(recovered).head())"
+   ],
+   "outputs": [
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": [
+       "Country/Region\n",
+       "Afghanistan    5\n",
+       "Albania        0\n",
+       "Algeria        3\n",
+       "Andorra        1\n",
+       "Angola         0\n",
+       "Name: 3/2/20, dtype: int64"
+      ]
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": [
+       "Country/Region\n",
+       "Afghanistan    0\n",
+       "Albania        0\n",
+       "Algeria        0\n",
+       "Andorra        0\n",
+       "Angola         0\n",
+       "Name: 3/2/20, dtype: int64"
+      ]
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": [
+       "Country/Region\n",
+       "Afghanistan    0\n",
+       "Albania        0\n",
+       "Algeria        0\n",
+       "Andorra        0\n",
+       "Angola         0\n",
+       "Name: 3/2/20, dtype: int64"
+      ]
+     },
+     "metadata": {}
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "source": [
+    "information = [latest_by_country(confirmed), latest_by_country(deaths), latest_by_country(recovered)]\n",
+    "combined = pd.concat(information, axis=1)\n",
+    "combined.columns = ['confirmed', 'deaths', 'recovered']\n",
+    "combined"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>confirmed</th>\n",
+       "      <th>deaths</th>\n",
+       "      <th>recovered</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Country/Region</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Afghanistan</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Albania</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Algeria</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Andorra</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Angola</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                confirmed  deaths  recovered\n",
+       "Country/Region                              \n",
+       "Afghanistan             5       0          0\n",
+       "Albania                 0       0          0\n",
+       "Algeria                 3       0          0\n",
+       "Andorra                 1       0          0\n",
+       "Angola                  0       0          0"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 49
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "source": [],
    "outputs": [],
