--- a/Data_Science-analises_para_saude_e_medicina/Data_Science_e_Saude.ipynb
+++ b/Data_Science-analises_para_saude_e_medicina/Data_Science_e_Saude.ipynb
@@ -4286,6 +4286,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 57,
+   "source": [
+    "information = [latest_by_country_at(confirmed, '2/8/20'), latest_by_country_at(deaths, '2/20/20'), latest_by_country_at(recovered, '2/20/20')]\n",
+    "combined_12 = pd.concat(information, axis=1)\n",
+    "combined_12.columns = ['confirmed', 'deaths', 'recovered']\n",
+    "\n",
+    "sum_up = combined_12.loc['China']\n",
+    "letality_rate_3 = sum_up['deaths'] / sum_up['confirmed']\n",
+    "\n",
+    "print(letality_rate_3 * 100)\n",
+    "display(sum_up)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "6.079208996577389\n"
+     ]
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": [
+       "confirmed    36814\n",
+       "deaths        2238\n",
+       "recovered    18014\n",
+       "Name: China, dtype: int64"
+      ]
+     },
+     "metadata": {}
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
    "execution_count": 49,
    "source": [
     "letality_rate_1 = combined['deaths'] / combined['confirmed'] * 100\n",
