--- a/Data_Science-analises_para_saude_e_medicina/Data_Science_e_Saude.ipynb
+++ b/Data_Science-analises_para_saude_e_medicina/Data_Science_e_Saude.ipynb
@@ -5420,10 +5420,15 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
+   "source": [
+    "Fim do curso"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
    "source": [],
-   "outputs": [],
    "metadata": {}
   }
  ],
