--- a/Python_Pandas-tecnicas_avancadas/Projeto.ipynb
+++ b/Python_Pandas-tecnicas_avancadas/Projeto.ipynb
@@ -12910,9 +12910,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 21,
+   "source": [
+    "bairros = pd.read_excel(\n",
+    "    io = 'bairros.xlsx',\n",
+    "    sheet_name = 'Preço médio por tipo',\n",
+    "    usecols = 'C:E',\n",
+    "    header = 2,\n",
+    "    index_col = [0, 1],\n",
+    "    names = ['bairros', 'tipo', 'valor_m2_bairro']\n",
+    ")\n",
+    "bairros"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>valor_m2_bairro</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>bairros</th>\n",
+       "      <th>tipo</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">São Cristóvão</th>\n",
+       "      <th>Casa</th>\n",
+       "      <td>13793</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Apartamento</th>\n",
+       "      <td>6306</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cobertura</th>\n",
+       "      <td>11695</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Consultório</th>\n",
+       "      <td>6991</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Imóvel Comercial</th>\n",
+       "      <td>19633</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">Vista Alegre</th>\n",
+       "      <th>Cobertura</th>\n",
+       "      <td>16567</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Consultório</th>\n",
+       "      <td>5812</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Imóvel Comercial</th>\n",
+       "      <td>12895</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Loja</th>\n",
+       "      <td>6182</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sala Comercial</th>\n",
+       "      <td>3377</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1127 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                valor_m2_bairro\n",
+       "bairros       tipo                             \n",
+       "São Cristóvão Casa                        13793\n",
+       "              Apartamento                  6306\n",
+       "              Cobertura                   11695\n",
+       "              Consultório                  6991\n",
+       "              Imóvel Comercial            19633\n",
+       "...                                         ...\n",
+       "Vista Alegre  Cobertura                   16567\n",
+       "              Consultório                  5812\n",
+       "              Imóvel Comercial            12895\n",
+       "              Loja                         6182\n",
+       "              Sala Comercial               3377\n",
+       "\n",
+       "[1127 rows x 1 columns]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 21
+    }
+   ],
    "metadata": {
     "id": "xoSV41cTevgV",
     "scrolled": true
