--- a/Python_Pandas-tecnicas_avancadas/Projeto.ipynb
+++ b/Python_Pandas-tecnicas_avancadas/Projeto.ipynb
@@ -22036,8 +22036,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
+   "execution_count": 102,
+   "source": [
+    "dados_listings['valor_m2'] = dados_listings['anuncio_valores_venda'] / dados_listings['imovel_area']"
+   ],
    "outputs": [],
    "metadata": {
     "id": "ucf8dkBzevg0",
@@ -22046,9 +22048,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 103,
+   "source": [
+    "dados_listings[['anuncio_valores_venda', 'imovel_area', 'valor_m2']].iloc[16:19]"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>anuncio_valores_venda</th>\n",
+       "      <th>imovel_area</th>\n",
+       "      <th>valor_m2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1390000.0</td>\n",
+       "      <td>214</td>\n",
+       "      <td>6495.327103</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>370583.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>inf</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>1600000.0</td>\n",
+       "      <td>300</td>\n",
+       "      <td>5333.333333</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    anuncio_valores_venda  imovel_area     valor_m2\n",
+       "8               1390000.0          214  6495.327103\n",
+       "13               370583.0            0          inf\n",
+       "24              1600000.0          300  5333.333333"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 103
+    }
+   ],
    "metadata": {
     "id": "RAPOfBHgevg0"
    }
@@ -22066,8 +22131,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
+   "execution_count": 104,
+   "source": [
+    "valor_m2 = lambda data :  data['anuncio_valores_venda'] / data['imovel_area'] if data['imovel_area'] != 0 else 0"
+   ],
    "outputs": [],
    "metadata": {
     "id": "yNmvRWLievg1"
@@ -22075,8 +22142,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
+   "execution_count": 105,
+   "source": [
+    " dados_listings['valor_m2'] = dados_listings.apply(valor_m2, axis=1)"
+   ],
    "outputs": [],
    "metadata": {
     "id": "Xeqd609_evg1"
@@ -22084,9 +22153,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 106,
+   "source": [
+    "dados_listings[['anuncio_valores_venda', 'imovel_area', 'valor_m2']].iloc[16:19]"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>anuncio_valores_venda</th>\n",
+       "      <th>imovel_area</th>\n",
+       "      <th>valor_m2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1390000.0</td>\n",
+       "      <td>214</td>\n",
+       "      <td>6495.327103</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>370583.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>1600000.0</td>\n",
+       "      <td>300</td>\n",
+       "      <td>5333.333333</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    anuncio_valores_venda  imovel_area     valor_m2\n",
+       "8               1390000.0          214  6495.327103\n",
+       "13               370583.0            0     0.000000\n",
+       "24              1600000.0          300  5333.333333"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 106
+    }
+   ],
    "metadata": {
     "id": "ZEvfUpFoevg2"
    }
@@ -22102,12 +22234,178 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 107,
+   "source": [
+    "dados_listings['Piscina'] = dados_listings['imovel_caracteristicas_condominio'].apply(lambda x: 'Piscina' in x)\n",
+    "dados_listings[['imovel_caracteristicas_condominio', 'Piscina']].head()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>imovel_caracteristicas_condominio</th>\n",
+       "      <th>Piscina</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>[Churrasqueira, Salão de Jogos, Sauna, Estacio...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>[Churrasqueira, Depósito Privativo, Quadra Pol...</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>[Elevador, Playground, Salão de Festas, Sistem...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>[Bicicletário, Comércio/Serviços no Condomínio...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>[Sauna, Playground, Quadra Poliesportiva, Salã...</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    imovel_caracteristicas_condominio  Piscina\n",
+       "0   [Churrasqueira, Salão de Jogos, Sauna, Estacio...    False\n",
+       "47  [Churrasqueira, Depósito Privativo, Quadra Pol...     True\n",
+       "1   [Elevador, Playground, Salão de Festas, Sistem...    False\n",
+       "16  [Bicicletário, Comércio/Serviços no Condomínio...    False\n",
+       "2   [Sauna, Playground, Quadra Poliesportiva, Salã...     True"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 107
+    }
+   ],
    "metadata": {
     "id": "U6z63nqXevg2"
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "source": [
+    "pd.set_option('display.max_colwidth', None)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "source": [
+    "dados_listings[['imovel_caracteristicas_condominio', 'Piscina']].head()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>imovel_caracteristicas_condominio</th>\n",
+       "      <th>Piscina</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>[Churrasqueira, Salão de Jogos, Sauna, Estacionamento Visitantes, Playground, Salão de Festas, Porteiro 24 Horas, Estacionamento Coberto, Aceita Pet, Sistema de Incêndio, Segurança Interna, Bicicletário, Acessibilidade]</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>[Churrasqueira, Depósito Privativo, Quadra Poliesportiva, Comércio/Serviços no Condomínio, Estacionamento Coberto, Acessibilidade, Segurança Interna, Sauna, Piscina, Elevador, Bicicletário, Salão de Jogos, Sistema de Incêndio, Academia, Estacionamento Visitantes, Playground, Serviço de Transporte no Condomínio, Salão de Festas]</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>[Elevador, Playground, Salão de Festas, Sistema de Incêndio, Salão de Jogos, Depósito Privativo, Porteiro 24 Horas, Academia, Churrasqueira, Quadra Poliesportiva]</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>[Bicicletário, Comércio/Serviços no Condomínio, Salão de Festas, Estacionamento Coberto, Segurança Interna, Quadra Poliesportiva, Churrasqueira, Aceita Pet]</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>[Sauna, Playground, Quadra Poliesportiva, Salão de Festas, Serviço de Transporte no Condomínio, Sistema de Incêndio, Salão de Jogos, Piscina, Aceita Pet]</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                                                                                                                                                                                                                                                            imovel_caracteristicas_condominio  \\\n",
+       "0                                                                                                                 [Churrasqueira, Salão de Jogos, Sauna, Estacionamento Visitantes, Playground, Salão de Festas, Porteiro 24 Horas, Estacionamento Coberto, Aceita Pet, Sistema de Incêndio, Segurança Interna, Bicicletário, Acessibilidade]   \n",
+       "47  [Churrasqueira, Depósito Privativo, Quadra Poliesportiva, Comércio/Serviços no Condomínio, Estacionamento Coberto, Acessibilidade, Segurança Interna, Sauna, Piscina, Elevador, Bicicletário, Salão de Jogos, Sistema de Incêndio, Academia, Estacionamento Visitantes, Playground, Serviço de Transporte no Condomínio, Salão de Festas]   \n",
+       "1                                                                                                                                                                          [Elevador, Playground, Salão de Festas, Sistema de Incêndio, Salão de Jogos, Depósito Privativo, Porteiro 24 Horas, Academia, Churrasqueira, Quadra Poliesportiva]   \n",
+       "16                                                                                                                                                                               [Bicicletário, Comércio/Serviços no Condomínio, Salão de Festas, Estacionamento Coberto, Segurança Interna, Quadra Poliesportiva, Churrasqueira, Aceita Pet]   \n",
+       "2                                                                                                                                                                                   [Sauna, Playground, Quadra Poliesportiva, Salão de Festas, Serviço de Transporte no Condomínio, Sistema de Incêndio, Salão de Jogos, Piscina, Aceita Pet]   \n",
+       "\n",
+       "    Piscina  \n",
+       "0     False  \n",
+       "47     True  \n",
+       "1     False  \n",
+       "16    False  \n",
+       "2      True  "
+      ]
+     },
+     "metadata": {},
+     "execution_count": 109
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
