--- a/Python_Pandas-tecnicas_avancadas/Projeto.ipynb
+++ b/Python_Pandas-tecnicas_avancadas/Projeto.ipynb
@@ -23514,6 +23514,8 @@
    "cell_type": "code",
    "execution_count": 125,
    "source": [
+    "# A quebra de linha pode ser feita com uma barra invertida \\\n",
+    "\n",
     "dados_listings.value_counts(subset=['imovel_tipos_uso', 'classe_valor'], normalize=True) \\\n",
     "    .to_frame(name='Percentual') * 100"
    ],
