Final do curso Python Pandas: técnicas avançadas

--- a/Python_Pandas-tecnicas_avancadas/Projeto.ipynb
+++ b/Python_Pandas-tecnicas_avancadas/Projeto.ipynb
@@ -30723,10 +30723,10 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "cell_type": "markdown",
+   "source": [
+    "Final do curso Python Pandas: técnicas avançadas"
+   ],
    "metadata": {
     "id": "vmmcXYh2evhN"
    }
