--- a/Machine_Learning-lidando_com_dados_de_muitas_dimensoes/Alura_Care.ipynb
+++ b/Machine_Learning-lidando_com_dados_de_muitas_dimensoes/Alura_Care.ipynb
@@ -5935,10 +5935,15 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
+   "source": [
+    "Final do Curso"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
    "source": [],
-   "outputs": [],
    "metadata": {}
   }
  ],
