--- a/GeoPandas_Parte1-trabalhando_com_dados_geoespaciais/01_Conhecendo_o_Geopandas.ipynb
+++ b/GeoPandas_Parte1-trabalhando_com_dados_geoespaciais/01_Conhecendo_o_Geopandas.ipynb
@@ -220,7 +220,7 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f0460f7d700>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fc99715d6d0>"
       ]
      },
      "metadata": {},
@@ -252,7 +252,7 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f0460fe6250>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fc99722d160>"
       ]
      },
      "metadata": {},
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "source": [
     "p1 = Polygon([(0, 0), (1,0), (1, 1), (0, 1)])\n",
     "p2 = Polygon([(0, 0), (1,0), (1, 1)])\n",
@@ -313,11 +313,11 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f045e1080d0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fc99688b5e0>"
       ]
      },
      "metadata": {},
-     "execution_count": 18
+     "execution_count": 8
     },
     {
      "output_type": "display_data",
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "source": [
     "g"
    ],
@@ -355,8 +355,15 @@
       ]
      },
      "metadata": {},
-     "execution_count": 19
+     "execution_count": 9
     }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "02.02 Trabalhando com Shapefiles"
    ],
    "metadata": {}
   },
